duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_len_zero.ml
[%%cstruct
  type t = {
    a: uint8_t [@len 0]
  }
  [@@little_endian]
]
